# ecommerce-session-recsys

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  create_github_repo.sh  dbt_project.yml  demo_app.py  docker-compose.yml  download_data.py  pyproject.toml  requirements.txt  setup_git.sh  train.sh
.github/workflows/: ci.yml
analyses/: avg_delivery_delay_by_state.sql  avg_order_value_by_state.sql  churned_customers.sql  cohort_analysis.sql  customer_retention_rate_by_month.sql  delivery_performance_trends.sql  monthly_revenue_growth_rate.sql  monthly_sales_trends.sql  product_cross_sell.sql  repeat_vs_first_time_buyers.sql  rfm_segmentation.sql  seller_performance.sql  top_10_best_selling_products.sql  top_10_customers_by_spend.sql  top_10_orders_by_value.sql  top_product_categories_by_revenue.sql
docs/: index.html
models/staging/: stg_category_translation.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_sellers.sql
src/: config.py
src/api/: main.py  recommender.py  schemas.py  session_store.py
src/artifacts/: .gitkeep
src/features/: __init__.py  feature_builder.py  feature_defs.py
src/training/: build_dataset.py  eval_offline.py  train_baselines.py  train_ranker.py
src/utils/: helpers.py  (+2 more)
tests/: conftest.py  test_api.py  test_recommender.py  test_session_store.py
visualizations/: README.md  customer_segmentation_viz.py  delivery_payment_viz.py  geographic_analysis_viz.py  product_analysis_viz.py  requirements.txt  run_all_visualizations.py  time_series_viz.py
(+1 files in other folders)
