[tool.poetry]
name = "ecommerce-recsys"
version = "0.1.0"
description = "Production-ready session-based recommender system for e-commerce"
authors = ["Pavan Kalyan Reddy Madatala"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
redis = "^5.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
lightgbm = "^4.2.0"
pyarrow = "^14.0.2"
duckdb = "^0.10.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.1.14"
black = "^24.1.1"
mypy = "^1.8.0"
ipython = "^8.20.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
